force-app/main/default/objects/Blackthorn_Base_Settings__c/fields/Auth_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Auth_Timestamp__c</fullName>
    <label>Auth Timestamp</label>
    <type>DateTime</type>
</CustomField>