force-app/main/default/objects/Blackthorn_Base_Settings__c/fields/Authorizing_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Authorizing_User_Id__c</fullName>
    <description>The Id of the user who authorized the app</description>
    <label>Authorizing User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>