force-app/main/default/objects/Blackthorn_Base_Settings__c/fields/OAuth_Completed__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OAuth Completed</label>
    <type>Checkbox</type>
</CustomField>